WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105099
DownloadProxyMap shouldn't be a singleton after all
https://bugs.webkit.org/show_bug.cgi?id=105099
Summary
DownloadProxyMap shouldn't be a singleton after all
Anders Carlsson
Reported
2012-12-15 12:06:14 PST
DownloadProxyMap shouldn't be a singleton after all
Attachments
Patch
(7.97 KB, patch)
2012-12-15 12:08 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-12-15 12:08:38 PST
Created
attachment 179605
[details]
Patch
Anders Carlsson
Comment 2
2012-12-15 12:14:43 PST
Committed
r137802
: <
http://trac.webkit.org/changeset/137802
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug