Source/WebKit2/UIProcess/Downloads/DownloadProxy.cpp
@@ -167,7 +167,6 @@ void DownloadProxy::didFinish()
 
     // This can cause the DownloadProxy object to be deleted.
     m_webContext->downloadFinished(this);
-    DownloadProxyMap::shared().downloadFinished(this);
 }
 
 static PassRefPtr<WebData> createWebData(const CoreIPC::DataReference& data)
@@ -189,7 +188,6 @@ void DownloadProxy::didFail(const ResourceError& error, const CoreIPC::DataRefer
 
     // This can cause the DownloadProxy object to be deleted.
     m_webContext->downloadFinished(this);
-    DownloadProxyMap::shared().downloadFinished(this);
 }
 
 void DownloadProxy::didCancel(const CoreIPC::DataReference& resumeData)
@@ -200,7 +198,6 @@ void DownloadProxy::didCancel(const CoreIPC::DataReference& resumeData)
 
     // This can cause the DownloadProxy object to be deleted.
     m_webContext->downloadFinished(this);
-    DownloadProxyMap::shared().downloadFinished(this);
 }
 
 #if PLATFORM(QT)
